fix: fixing collect AndCriteria